<resources>
    <string name="app_name">DietKu</string>
    <string name="prompt_email">e-mail</string>
    <string name="prompt_email_username">e-mail atau username</string>
    <string name="prompt_username">username</string>
    <string name="prompt_password">kata sandi</string>
    <string name="action_log_in">Masuk</string>
    <string name="forgot">Lupa kata sandi?</string>
    <string name="prompt_register">Belum memiliki akun? Daftar Akun</string>
    <string name="lock">gembok</string>
    <string name="profil">profil</string>
    <string name="prompt_nope">Tidak Aktif Sama Sekali\nMenghabiskan sebagian besar waktu harinya hanya untuk
        duduk\n(Contoh: teller bank, pekerja kantoran)</string>
    <string name="prompt_cukup">Cukup Aktif\nMenggunakan sebagain waktunya untuk bergerak\n
        (Contoh: guru, pekerja sales, teller bank, penjual)</string>
    <string name="prompt_aktif">Aktif\nMenggunakan sebagian waktunya untuk melakukan aktivitas fisik\n
        (Contoh: pelayan, pengantar pos)</string>
    <string name="prompt_sangatAktif">Sangat Aktif\nMenggunakan sebagian waktunya untuk melakukan aktivitas
        yang berat\n(Contoh: pengrajin kayu)</string>
</resources>
