<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".register_first">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintBottom_toTopOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:layout_editor_absoluteX="0dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="406dp"
        android:layout_height="50dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="278dp"
        android:layout_height="49dp"
        android:layout_marginTop="24dp"
        android:text="Apa e-mail dan username mu?"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <EditText
        android:id="@+id/password_regis"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="99dp"

        android:background="@drawable/background_logintext"
        android:ems="10"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:paddingStart="10dp"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/caption_password" />

    <EditText
        android:id="@+id/username_regist"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="99dp"
        android:layout_marginTop="16dp"

        android:layout_marginEnd="99dp"
        android:background="@drawable/background_logintext"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:inputType="textPersonName"
        android:paddingStart="10dp"

        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_regis" />

    <EditText
        android:id="@+id/email_regis"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_marginStart="98dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="100dp"

        android:background="@drawable/background_logintext"
        android:ems="10"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:paddingStart="10dp"
        android:textSize="14sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <TextView
        android:id="@+id/caption_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="190dp"
        android:text="Minimal 6 karakter"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_regist" />

</android.support.constraint.ConstraintLayout>